--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Stefan Krastanov <stefan@krastanov.org>"]
 version = "0.1.1"
 
 [deps]
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -17,6 +18,7 @@ QuantumOpticsBase = "4f57444f-1401-5e15-980d-4471b28d5678"
 QuantumSymbolics = "efa7fd63-0460-4890-beb7-be1bbdfbaeae"
 Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 ResumableFunctions = "c5292f4c-5179-55e1-98c5-05642aab7184"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SimJulia = "428bdadb-6287-5aa5-874b-9969638295fd"
 SnoopPrecompile = "66db9d55-30c0-4569-8b51-7e840670fc0c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
